// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkipLink renders skiplink widget and adds skip link to DOM 1`] = `
<div
  id="root"
>
  <div>
    <a
      class="widget-skip-link mx-skiplink"
      href="#main-content"
    >
      Skip to main content
    </a>
  </div>
</div>
`;

exports[`SkipLink renders with custom link text 1`] = `
<div
  id="root"
>
  <div>
    <a
      class="widget-skip-link mx-skiplink"
      href="#main-content"
    >
      Jump to content
    </a>
  </div>
</div>
`;

exports[`SkipLink renders with custom main content id 1`] = `
<div
  id="root"
>
  <div>
    <a
      class="widget-skip-link mx-skiplink"
      href="#content-area"
    >
      Skip to main content
    </a>
  </div>
</div>
`;

exports[`SkipLink renders with empty main content id 1`] = `
<div
  id="root"
>
  <div>
    <a
      class="widget-skip-link mx-skiplink"
      href="#"
    >
      Skip to main content
    </a>
  </div>
</div>
`;
